sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: ')' expected but ',' found.
			if (!plusPetit(getValeur(i-j)),tmp){
                                                      ^AlgInsertionSort:14: error: illegal start of simple expression
		}
                ^