sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	val longueur:Int = getNombreValeurs();
	var tmp:Int = 0;
	var lastCase:Int = 0;
	for (i <- 0 to longueur -1) {
		for (j<- 0 to i) {
			tmp = getValeur(i);
			if (!plusPetit(getValeur(i-j)),tmp){
				setValeur(i-j,getValeur(i-j));
				lastCase = (i-j);
			}
			
		}
		 setValeur(lastCase,tmp);
	}
	
}
